# QCC74x

./: .gitignore  AUTONOMOUS-AGENTS.md  AUTONOMOUS-DEV-GUIDE.md  CLAUDE.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: autonomous-fix.yml  zephyr-build.yml
WS2812/: CMakeLists.txt  Makefile  README.md  build.ps1  flash_prog_cfg.ini  main.cpp  proj.conf
scripts/: ai-powered-build-agent.py  autonomous-build-agent.sh  monitor-build.sh
zephyr-gpio-blinky/: CMakeLists.txt  README.md  prj.conf
zephyr-gpio-blinky/boards/: qcc748m.overlay
zephyr-gpio-blinky/src/: main.c
